fix: broken home nav bg on small screen when open

--- a/src/components/NavBar/styles.module.scss
+++ b/src/components/NavBar/styles.module.scss
@@ -13,7 +13,7 @@
   }
 }
 
-.navbarBeforeScroll {
+.transparentNav {
   @extend %customNav;
 
   background: transparent;
@@ -23,7 +23,7 @@
   }
 }
 
-.navbarDuringScroll {
+.whiteNav {
   @extend %customNav;
 
   background-color: rgba(white, 0.9);
